added hello world node

--- a/igvc/CMakeLists.txt
+++ b/igvc/CMakeLists.txt
@@ -193,3 +193,4 @@ add_subdirectory(src/dashboard)
 add_subdirectory(src/path_follower)
 add_subdirectory(src/pidtester)
 add_subdirectory(src/local_mapper)
+add_subdirectory(src/hello_world)
